--- a/gutter-tab/package.json
+++ b/gutter-tab/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "vue-css-animations",
+  "name": "gutter-tab",
   "version": "1.0.0",
-  "description": "A Vue 3 project for testing CSS animations using Vite.",
+  "description": "Explorations for gutter tab behaviours.",
   "main": "src/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "gh-pages": "^6.3.0",
     "vite": "^6.2.1"
   },
   "keywords": [
@@ -21,6 +23,5 @@
     "animations",
     "vite"
   ],
-  "author": "Your Name",
-  "license": "MIT"
+  "author": "Lee Murray"
 }
