Fix deployment path - remove duplicate demos prefix

--- a/.github/workflows/deploy-chat-input.yml
+++ b/.github/workflows/deploy-chat-input.yml
@@ -38,4 +38,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./chat-input-prototype/dist
           publish_branch: gh-pages
-          destination_dir: demos/chat-input-prototype
+          destination_dir: chat-input-prototype
