Force clean deployment to remove old files

--- a/.github/workflows/deploy-chat-input.yml
+++ b/.github/workflows/deploy-chat-input.yml
@@ -39,3 +39,4 @@ jobs:
           publish_dir: ./chat-input-prototype/dist
           publish_branch: gh-pages
           destination_dir: chat-input-prototype
+          keep_files: false
