--- a/.github/workflows/deploy-chat-input.yml
+++ b/.github/workflows/deploy-chat-input.yml
@@ -38,5 +38,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./chat-input-prototype/dist
           publish_branch: gh-pages
-          destination_dir: chat-input-prototype
+          destination_dir: demos/chat-input-prototype
           keep_files: false
