Refactor deployment workflow and add favicon and index.html for demos

--- a/.github/workflows/deploy-demos.yml
+++ b/.github/workflows/deploy-demos.yml
@@ -51,109 +51,8 @@ jobs:
           mkdir -p deploy
           cp -r chat-input-prototype/dist deploy/chat-input-prototype
           cp -r gutter-tab/dist deploy/gutter-tab
-      
-      # Create root index.html
-      - name: Create root index
-        run: |
-          cat > deploy/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html lang="en">
-          <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Demos - Lee Murray</title>
-            <style>
-              * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-              }
-              body {
-                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-                background: #1e1e1e;
-                color: #cccccc;
-                padding: 40px 20px;
-                min-height: 100vh;
-              }
-              .container {
-                max-width: 800px;
-                margin: 0 auto;
-              }
-              h1 {
-                font-size: 32px;
-                font-weight: 600;
-                margin-bottom: 12px;
-                color: #ffffff;
-              }
-              .subtitle {
-                font-size: 16px;
-                color: #999999;
-                margin-bottom: 48px;
-              }
-              .demos {
-                display: grid;
-                gap: 20px;
-              }
-              .demo-card {
-                background: #252526;
-                border: 1px solid #3c3c3c;
-                border-radius: 8px;
-                padding: 24px;
-                text-decoration: none;
-                color: inherit;
-                transition: all 0.2s ease;
-                display: block;
-              }
-              .demo-card:hover {
-                border-color: #007acc;
-                background: #2d2d30;
-                transform: translateY(-2px);
-              }
-              .demo-title {
-                font-size: 20px;
-                font-weight: 600;
-                color: #ffffff;
-                margin-bottom: 8px;
-              }
-              .demo-description {
-                font-size: 14px;
-                color: #999999;
-                line-height: 1.5;
-              }
-              .demo-path {
-                font-size: 12px;
-                color: #007acc;
-                margin-top: 12px;
-                font-family: 'Courier New', monospace;
-              }
-            </style>
-          </head>
-          <body>
-            <div class="container">
-              <h1>Demos</h1>
-              <p class="subtitle">Interactive prototypes and explorations</p>
-              
-              <div class="demos">
-                <a href="/chat-input-prototype/" class="demo-card">
-                  <div class="demo-title">Chat Input Prototype</div>
-                  <div class="demo-description">
-                    VSCode-inspired chat interface with token tracking, animation controls, and message history.
-                  </div>
-                  <div class="demo-path">/chat-input-prototype/</div>
-                </a>
-                
-                <a href="/gutter-tab/" class="demo-card">
-                  <div class="demo-title">Gutter Tab</div>
-                  <div class="demo-description">
-                    Explorations for gutter tab behaviors and interactions.
-                  </div>
-                  <div class="demo-path">/gutter-tab/</div>
-                </a>
-              </div>
-            </div>
-          </body>
-          </html>
-          EOF
+          cp index.html deploy/index.html
+          cp favicon.png deploy/favicon.png
       
       - name: Add CNAME file
         run: echo "demos.mrleemurray.com" > deploy/CNAME
