--- a/.github/workflows/deploy-demos.yml
+++ b/.github/workflows/deploy-demos.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - 'chat-input-prototype/**'
       - 'gutter-tab/**'
+      - 'index.html'
+      - 'favicon.svg'
       - '.github/workflows/deploy-demos.yml'
   workflow_dispatch:
 
