--- a/bento-layout/package.json
+++ b/bento-layout/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vscode/codicons": "^0.0.43",
+    "@vscode/codicons": "^0.0.45-11",
     "vue": "^3.5.24"
   },
   "devDependencies": {
